--- a/vagrant/config.yaml
+++ b/vagrant/config.yaml
@@ -7,7 +7,7 @@ networking:
     - public: false
 
 folders:
-    - map: .
+    - map: ../
       to: /var/www/html
       type: nfs
 
@@ -17,6 +17,7 @@ php: 7
 # Uses nginx + PHP-FPM. If set to false, uses Apache.
 nginx: true
 
+postgresql: false
 # ports:
 #     - guest: 80
 #       host: 8000
